Version 0.9.4
@@-@@@-@@@@
* [jonathanw] Fix sending function keys (issue 23)
* [Andrew Wu] Documentation added (issue 20)
* [Andrew Wu] sendKeys() now supports newlines (issue 22)
* [James Tatum] Null attributes now return None rather than raising a
  atomac.Error exception (AXError -25212) (issue 27)
* [James Tatum] CFRange attribute values like AXSelectedText are now supported
  (issue 29)


Version 0.9.3
09-Jul-2011
* New NativeUIElement convenience methods sliders() and slidersR()
* Small update to Prefs to remove a seemingly unneeded exception handler
* Project renamed from PyATOM to ATOMac - now listed in PyPI as atomac and
  module import matches - import atomac. Apologies for that.

Version 0.9.2
06-Jul-2011
NativeUIElement:
* floating point values can now be read and written (such as AXValue on a
  slider control)
* fixed a couple of improperly handled error conditions

Version 0.9.1
27-May-2011

NativeUIElement:
* added sendGlobalKeyWithModifiers - used to press system wide shortcut keys
* added terminateAppByBundleId
* pressModifiers and ReleaseModifiers - hold modifier keys down rather than
  pressing them in concert with another key or mouse click
* Small bug fixes

Prefs:
* New proxy class for manipulating application preferences before tests

Thanks to:
Andrew Wu, Ken Song, Julián Romero

Version 0.9
29-Apr-2011

* Initial release
